src/objects/Conversion_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Conversion Rate</label>
    <nameField>
        <label>Conversion Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversion Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Conversion_Rate__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>